--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
-name:                arduino-sparse
+name:                sparse-bitmaps
 version:             0.1.0.0
-github:              "githubuser/arduino-sparse"
-license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2018 Author name here"
+github:              "zouroboros/sparse-bitmaps"
+license:             MIT
+author:              "Zouroboros"
+maintainer:          "zouroboros@zoho.eu"
+copyright:           "2018 Zouroboros"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/arduino-sparse#readme>
+description:         Please see the README on GitHub at <https://github.com/zouroboros/sparse-bitmaps#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -28,7 +28,7 @@ library:
   source-dirs: src
 
 executables:
-  arduino-sparse-exe:
+  sparse-bitmaps-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -36,10 +36,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - arduino-sparse
+    - sparse-bitmaps
 
 tests:
-  arduino-sparse-test:
+  sparse-bitmaps-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -47,5 +47,5 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - arduino-sparse
+    - sparse-bitmaps
     - hspec >= 2.5
