--- a/package.yaml
+++ b/package.yaml
@@ -40,12 +40,7 @@ executables:
 
 tests:
   sparse-bitmaps-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+    defaults: hspec/hspec@master
     dependencies:
     - sparse-bitmaps
     - hspec >= 2.5
